--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <!-- name -->
               <h5 class="art-name mb-10"><a href="/home.html">Collins Nyamao</a></h5>
               <!-- post -->
-              <div class="art-sm-text">Front-end Deweloper <br>Ui/UX Designer, </div>
+              <div class="art-sm-text">Front-end Developer <br>Ui/UX Designer, </div>
             </div>
             <!-- info bar header end -->
 
