--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                       <!-- title frame -->
                       <div class="art-title-frame">
                         <!-- title -->
-                        <h4>Recommendations</h4>
+                        <h4>Testimonials</h4>
                       </div>
                       <!-- title frame end -->
                     </div>
