Feat: added testimonials

--- a/index.html
+++ b/index.html
@@ -540,15 +540,15 @@
                             <!-- testimonial body -->
                             <div class="testimonial-body">
                               <!-- photo -->
-                              <img class="art-testimonial-face" src="img/testimonials/face-1.jpg" alt="face">
+                              <img class="art-testimonial-face" src="img/testimonials/mary.jpg" alt="face">
                               <!-- name -->
-                              <h5>Paul Trueman</h5>
-                              <div class="art-el-suptitle mb-15">Template author</div>
+                              <h5>Mary Mbuvi</h5>
+                              <div class="art-el-suptitle mb-15">Team leader [E-Kraal - Team blueray]</div>
                               <!-- text -->
-                              <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
-                                a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
-                                ask for better support. Thank you Artur!
-                                This is easily a 5 star freelancer.</div>
+                              <div class="mb-15">I have worked with Collins for 3 years, during which his experience as
+                                a front-end developer has proved immensely valuable. His works has always portrayed
+                                outstanding attention to detail. He is also a good communicator and a team player, and
+                                has always demonstrated willingness to learn in all the projects we've worked on.</div>
                             </div>
                             <!-- testimonial body end -->
                             <!-- testimonial footer -->
@@ -583,15 +583,18 @@
                             <!-- testimonial body -->
                             <div class="testimonial-body">
                               <!-- photo -->
-                              <img class="art-testimonial-face" src="img/testimonials/face-2.jpg" alt="face">
+                              <img class="art-testimonial-face" src="img/testimonials/rodgers.jpg" alt="face">
                               <!-- name -->
-                              <h5>Paul Trueman</h5>
-                              <div class="art-el-suptitle mb-15">Template author</div>
+                              <h5>Rodgers Nyangweso</h5>
+                              <div class="art-el-suptitle mb-15">Team technical lead [E-Kraal - Team blueray]</div>
                               <!-- text -->
-                              <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
-                                a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
-                                ask for better support. Thank you Artur!
-                                This is easily a 5 star freelancer.</div>
+                              <div class="mb-15">Having worked with Collins for over 3 years, he has
+                                consistently proven himself as a team player who brings immense value to the projects he
+                                works in. He has demonstrated great passion and creativity coupled with a vast skillset
+                                in software development and the tech field in general. Time and time again he has
+                                leveraged these qualities to ensure he always goes above and beyond to deliver quality
+                                results in everything he does, inspiring other team members in the process. I will
+                                definitely recommend him to any team.</div>
                             </div>
                             <!-- testimonial body end -->
                             <!-- testimonial footer -->
@@ -603,7 +606,7 @@
                                   <li><i class="fas fa-star"></i></li>
                                   <li><i class="fas fa-star"></i></li>
                                   <li><i class="fas fa-star"></i></li>
-                                  <li class="art-empty-item"><i class="fas fa-star"></i></li>
+                                  <li><i class="fas fa-star"></i></li>
                                 </ul>
                                 <!-- star rate end -->
                               </div>
@@ -619,28 +622,19 @@
                         <!-- slide end -->
 
                         <!-- slide -->
-                        <div class="swiper-slide">
-
-                          <!-- testimonial -->
+                        <!-- <div class="swiper-slide">
                           <div class="art-a art-testimonial">
-                            <!-- testimonial body -->
                             <div class="testimonial-body">
-                              <!-- photo -->
                               <img class="art-testimonial-face" src="img/testimonials/face-3.jpg" alt="face">
-                              <!-- name -->
                               <h5>Paul Trueman</h5>
                               <div class="art-el-suptitle mb-15">Template author</div>
-                              <!-- text -->
                               <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
                                 a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
                                 ask for better support. Thank you Artur!
                                 This is easily a 5 star freelancer.</div>
                             </div>
-                            <!-- testimonial body end -->
-                            <!-- testimonial footer -->
                             <div class="art-testimonial-footer">
                               <div class="art-left-side">
-                                <!-- star rate -->
                                 <ul class="art-star-rate">
                                   <li><i class="fas fa-star"></i></li>
                                   <li><i class="fas fa-star"></i></li>
@@ -648,42 +642,25 @@
                                   <li><i class="fas fa-star"></i></li>
                                   <li><i class="fas fa-star"></i></li>
                                 </ul>
-                                <!-- star rate end -->
                               </div>
                               <div class="art-right-side">
-
                               </div>
                             </div>
-                            <!-- testimonial footer end -->
                           </div>
-                          <!-- testimonial end -->
-
-                        </div>
-                        <!-- slide end -->
-
-                        <!-- slide -->
-                        <div class="swiper-slide">
-
-                          <!-- testimonial -->
+                        </div> -->
+                        <!-- <div class="swiper-slide">
                           <div class="art-a art-testimonial">
-                            <!-- testimonial body -->
                             <div class="testimonial-body">
-                              <!-- photo -->
                               <img class="art-testimonial-face" src="img/testimonials/face-4.jpg" alt="face">
-                              <!-- name -->
                               <h5>Paul Trueman</h5>
                               <div class="art-el-suptitle mb-15">Template author</div>
-                              <!-- text -->
                               <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
                                 a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
                                 ask for better support. Thank you Artur!
                                 This is easily a 5 star freelancer.</div>
                             </div>
-                            <!-- testimonial body end -->
-                            <!-- testimonial footer -->
                             <div class="art-testimonial-footer">
                               <div class="art-left-side">
-                                <!-- star rate -->
                                 <ul class="art-star-rate">
                                   <li><i class="fas fa-star"></i></li>
                                   <li><i class="fas fa-star"></i></li>
@@ -691,21 +668,14 @@
                                   <li><i class="fas fa-star"></i></li>
                                   <li><i class="fas fa-star"></i></li>
                                 </ul>
-                                <!-- star rate end -->
                               </div>
                               <div class="art-right-side">
-
                               </div>
                             </div>
-                            <!-- testimonial footer end -->
                           </div>
-                          <!-- testimonial end -->
-
-                        </div>
-                        <!-- slide end -->
-
+                        </div> -->
                       </div>
-                      <!-- slider wrapper end -->
+
                     </div>
                     <!-- slider container end -->
 
