--- a/index.html
+++ b/index.html
@@ -733,28 +733,28 @@
                   <!-- col -->
                   <div class="col-6 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
+                    <img class="art-brand" src="img/brands/nodejs.png" alt="brand">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
                   <div class="col-6 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/2.png" alt="brand">
+                    <img class="art-brand" src="img/brands/react.png" alt="brand">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
                   <div class="col-6 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/3.png" alt="brand">
+                    <img class="art-brand" src="img/brands/vue.png" alt="brand">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
                   <div class="col-6 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
+                    <img class="art-brand" src="img/brands/mongodb.png" alt="brand">
                   </div>
                   <!-- col end -->
 
