--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
                 <!-- menu list -->
                 <ul class="main-menu">
                   <!-- menu item -->
-                  <li class="menu-item current-menu-item"><a href="/home.html">Home</a></li>
+                  <li class="menu-item current-menu-item"><a href="/index.html">Home</a></li>
                   <!-- menu item -->
                   <!--  -->
                   <!-- menu item -->
