--- a/index.html
+++ b/index.html
@@ -619,6 +619,46 @@
                           <!-- testimonial end -->
 
                         </div>
+
+                        <div class="swiper-slide">
+
+                          <!-- testimonial -->
+                          <div class="art-a art-testimonial">
+                            <!-- testimonial body -->
+                            <div class="testimonial-body">
+                              <!-- photo -->
+                              <img class="art-testimonial-face" src="img/testimonials/face-1.jpg" alt="face">
+                              <!-- name -->
+                              <h5>Paul Mayero</h5>
+                              <div class="art-el-suptitle mb-15">Senior developer [E-Kraal - Team blueray]</div>
+                              <!-- text -->
+                              <div class="mb-15">Collins is a delight to work with. His understanding of concepts is
+                                from first principles and always delivers on execution of tasks. He is an awesome
+                                individual who adds value and pomp to any team. And he is just getting started.</div>
+                            </div>
+                            <!-- testimonial body end -->
+                            <!-- testimonial footer -->
+                            <div class="art-testimonial-footer">
+                              <div class="art-left-side">
+                                <!-- star rate -->
+                                <ul class="art-star-rate">
+                                  <li><i class="fas fa-star"></i></li>
+                                  <li><i class="fas fa-star"></i></li>
+                                  <li><i class="fas fa-star"></i></li>
+                                  <li><i class="fas fa-star"></i></li>
+                                  <li><i class="fas fa-star"></i></li>
+                                </ul>
+                                <!-- star rate end -->
+                              </div>
+                              <div class="art-right-side">
+
+                              </div>
+                            </div>
+                            <!-- testimonial footer end -->
+                          </div>
+                          <!-- testimonial end -->
+
+                        </div>
                         <!-- slide end -->
 
                         <!-- slide -->
