--- a/index.html
+++ b/index.html
@@ -856,6 +856,7 @@
                 <ul class="main-menu">
                   <!-- menu item -->
                   <li class="menu-item current-menu-item"><a href="/index.html">Home</a></li>
+                  <li class="menu-item"><a href="/history.html">History</a></li>
                   <!-- menu item -->
                   <!--  -->
                   <!-- menu item -->
