--- a/history.html
+++ b/history.html
@@ -240,7 +240,7 @@
               <div class="art-links-frame p-15-15">
 
                 <!-- download cv button -->
-                <a href="files/CollinsNyamaoCV.pdf" class="art-link" download>Download cv <i
+                <a href="files/CollinsNyamaoCV-2.pdf" class="art-link" download>Download cv <i
                     class="fas fa-download"></i></a>
 
               </div>
