--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Arter</title>
+  <title>Collins Nyamao</title>
 </head>
 
 <body>
@@ -415,7 +415,8 @@
                         <!-- form field -->
                         <div class="art-form-field">
                           <!-- message textarea -->
-                          <textarea id="message" name="text" class="art-input" placeholder="Message" required></textarea>
+                          <textarea id="message" name="text" class="art-input" placeholder="Message"
+                            required></textarea>
                           <!-- label -->
                           <label for="message"><i class="far fa-envelope"></i></label>
                         </div>
@@ -486,7 +487,8 @@
                 <!-- copyright -->
                 <div>© 2020 Artur Carter</div>
                 <!-- author ( Please! Do not delete it. You are awesome! :) -->
-                <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign" target="_blank">Nazar Miller</a></div>
+                <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign"
+                    target="_blank">Nazar Miller</a></div>
               </footer>
               <!-- footer end -->
 
