--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Arter</title>
+  <title>Collins Nyamao</title>
 </head>
 
 <body>
