--- a/blog-2-col.html
+++ b/blog-2-col.html
@@ -20,7 +20,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Arter</title>
+  <title>Collins Nyamao</title>
 </head>
 
 <body>
@@ -556,7 +556,8 @@
                     <!-- pagination -->
                     <div class="art-a art-pagination">
                       <!-- button -->
-                      <a href="/blog-3-col.html" class="art-link art-color-link art-w-chevron art-left-link"><span>Previous page</span></a>
+                      <a href="/blog-3-col.html"
+                        class="art-link art-color-link art-w-chevron art-left-link"><span>Previous page</span></a>
                       <div class="art-pagination-center art-m-hidden">
                         <a href="/blog-3-col.html"></a>
                         <a href="/blog-3-col.html">1</a>
@@ -565,7 +566,8 @@
                         <a href="/blog-3-col.html">...</a>
                       </div>
                       <!-- button -->
-                      <a href="/blog-3-col.html" class="art-link art-color-link art-w-chevron"><span>Next page</span></a>
+                      <a href="/blog-3-col.html" class="art-link art-color-link art-w-chevron"><span>Next
+                          page</span></a>
                     </div>
                     <!-- pagination end -->
 
@@ -626,7 +628,8 @@
                   <!-- copyright -->
                   <div>© 2020 Artur Carter</div>
                   <!-- author ( Please! Do not delete it. You are awesome! :) -->
-                  <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign" target="_blank">Nazar Miller</a></div>
+                  <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign"
+                      target="_blank">Nazar Miller</a></div>
                 </footer>
                 <!-- footer end -->
 
